--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "laravel/laravel",
+    "name": "CVAL",
     "type": "project",
-    "description": "The Laravel Framework.",
+    "description": "CVAL",
     "keywords": [
-        "framework",
-        "laravel"
+        "cval",
+        "greysoft"
     ],
     "license": "MIT",
     "require": {
